--- a/AutomationZionet.Base/AutomationZionet.Base.csproj
+++ b/AutomationZionet.Base/AutomationZionet.Base.csproj
@@ -54,8 +54,11 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scripts\Finder.cs" />
     <Compile Include="Scripts\ScriptBase.cs" />
+    <Compile Include="Setting.cs" />
     <Compile Include="WebElements\ElementBase.cs" />
+    <Compile Include="WebElements\ElementInput.cs" />
     <Compile Include="WebElements\ElementButton.cs" />
   </ItemGroup>
   <ItemGroup>
