--- a/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
+++ b/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
@@ -52,9 +52,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LambdaConfig.cs" />
+    <Compile Include="LambdaDownloadBetYears.cs" />
     <Compile Include="LambdaFinder.cs" />
     <Compile Include="LambdaRunner.cs" />
     <Compile Include="LambdaScriptBase.cs" />
+    <Compile Include="LambdaDownloadOneMonth.cs" />
     <Compile Include="LambdaStartSelect.cs" />
     <Compile Include="LambdaUrls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
