--- a/AutomationZionet.Base/packages.config
+++ b/AutomationZionet.Base/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Selenium.WebDriver" version="4.9.0" targetFramework="net48" />
+  <package id="Selenium.Support" version="4.9.1" targetFramework="net48" />
+  <package id="Selenium.WebDriver" version="4.9.1" targetFramework="net48" />
   <package id="Selenium.WebDriver.ChromeDriver" version="113.0.5672.6300" targetFramework="net48" />
 </packages>
