--- a/AutomationZionet.Base/AutomationZionet.Base.csproj
+++ b/AutomationZionet.Base/AutomationZionet.Base.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Driver\ChromeDriverBase.cs" />
     <Compile Include="Driver\DriverBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Runner\RunnerBase.cs" />
     <Compile Include="Scripts\Finder.cs" />
     <Compile Include="Scripts\ScriptBase.cs" />
     <Compile Include="Setting.cs" />
