--- a/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
+++ b/Automation.XNes.Lambda/Automation.XNes.Lambda.csproj
@@ -83,6 +83,9 @@
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="System.Data.OracleClient" />
+    <Reference Include="System.Diagnostics.EventLog, Version=7.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Diagnostics.EventLog.7.0.0\lib\net462\System.Diagnostics.EventLog.dll</HintPath>
+    </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
@@ -111,6 +114,9 @@
       <HintPath>..\packages\System.Security.Principal.Windows.5.0.0\lib\net461\System.Security.Principal.Windows.dll</HintPath>
     </Reference>
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.ServiceProcess.ServiceController, Version=7.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ServiceProcess.ServiceController.7.0.0\lib\net462\System.ServiceProcess.ServiceController.dll</HintPath>
+    </Reference>
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
@@ -143,16 +149,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LambdaConfig.cs" />
-    <Compile Include="LambdaDownloadBetYears.cs" />
+    <Compile Include="Runner\BituchRunner.cs" />
+    <Compile Include="Scripts\lambdaBituchOneMonth.cs" />
+    <Compile Include="Scripts\LambdaDownloadBetYears.cs" />
     <Compile Include="LambdaFinder.cs" />
-    <Compile Include="LambdaFullDownload_Gemel.cs" />
-    <Compile Include="LambdaRunner.cs" />
+    <Compile Include="Runner\LambdaFullDownload_Gemel_All.cs" />
+    <Compile Include="Runner\LambdaFullDownload_Gemel.cs" />
+    <Compile Include="Runner\LambdaRunAll.cs" />
+    <Compile Include="Runner\LambdaRunner.cs" />
     <Compile Include="LambdaScriptBase.cs" />
-    <Compile Include="LambdaDownloadOneMonth.cs" />
-    <Compile Include="LambdaStartSelect.cs" />
+    <Compile Include="Scripts\LambdaDownloadOneMonth.cs" />
+    <Compile Include="Scripts\LambdaStartSelect.cs" />
     <Compile Include="LambdaUrls.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SingleRunner.cs" />
+    <Compile Include="Runner\SingleRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AutomationZionet.Base\AutomationZionet.Base.csproj">
@@ -164,6 +174,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
