--- a/Automation.XNes.Lambda/packages.config
+++ b/Automation.XNes.Lambda/packages.config
@@ -20,6 +20,7 @@
   <package id="SharpZipLib.NETStandard" version="1.0.7" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Configuration.ConfigurationManager" version="7.0.0" targetFramework="net48" />
+  <package id="System.Diagnostics.EventLog" version="7.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
@@ -27,6 +28,7 @@
   <package id="System.Security.AccessControl" version="6.0.0" targetFramework="net48" />
   <package id="System.Security.Permissions" version="7.0.0" targetFramework="net48" />
   <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.ServiceProcess.ServiceController" version="7.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="TestAny.Essentials.Api" version="1.0.5.15" targetFramework="net48" />
